--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-
-      <!--First block on page-->
-      <h1>
-        Effective Solutions <br />
-        for Your Business
-      </h1>
-      <button type="button">Order Service</button>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <!--Content-->
     <main>
       <!--Section1-->
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+
+      <!--Section2-->
       <section>
         <ul>
           <li>
@@ -63,7 +64,7 @@
         </ul>
       </section>
 
-      <!--Section2-->
+      <!--Section3-->
       <section>
         <h2>Our Team</h2>
         <ul>
