--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <!--Content-->
     <main>
       <!--Section1-->
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
 
       <!--Section2-->
       <section>
